--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.20",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
-    "minimist": "^1.2.6"
+    "nodemon": "^2.0.6"
   }
 }
